<?xml version="1.0" encoding="UTF-8" ?>
<resources>
    <string name="app_name">Options Menu</string>

    <string name="action_setting">Setting</string>
    <string name="title_search">Search</string>
    <string name="title_share">Share</string>


    <string name="title_red">Red</string>
    <string name="title_blue">Blue</string>

    <string name="title_purple">Purple</string>
    <string name="title_green">Green</string>


</resources>
